refactor: finished todo and applied function name cleanups